Change app background color to avoid sharp contrast
Matched salesforce brand color of light blue - this applies mostly to the app home page, but also applies to the background between components

work towards #1109

--- a/apps/jetstream/src/main.scss
+++ b/apps/jetstream/src/main.scss
@@ -10,7 +10,7 @@
 }
 
 html {
-  background-color: rgb(17, 24, 39);
+  background: var(--lwc-brandBackgroundPrimary, rgba(176, 196, 223, 1));
 }
 
 .app {
